# ESP-32

Esp-32_LED/GUI/: config.json  config.py  connection.py  gui.py  main.py  widgets.py
Esp-32_LED/src/: CommunicationModule.cpp  CommunicationModule.h  Esp-32_LED.code-workspace  HardwareModule.cpp  HardwareModule.h  main.cpp
Esp-32_LED/user_interface/: comunication.py  last_ip.txt  servo_gui.py  user_interface.code-workspace
IK/: IK.py  arm.py  pybull.py  up.py
Qt_Test/src/: main.cpp
Robotarm with 1 servo/Qt client/: CMakeLists.txt  MainScreen.qml  backend.cpp  backend.h  esp32client.cpp  esp32client.h
Robotarm with 1 servo/esp32 server/: check_gui.py  main.cpp
Servo/: esp32_connection.conf  platformio.ini
Servo/src/: main.cpp
servo_server/: esp32_connection.conf
servo_server/src/: check_gui.py  main.cpp
